# extended_apis

./: .appveyor.yml  .codecov.yml  .doxygen.txt  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile.bf  README.md  codecov.yml  extension.cmake
bfvmm/: CMakeLists.txt
bfvmm/include/hve/: pci_register.h  phys_pci.h
bfvmm/include/hve/arch/intel_x64/: apis.h  base.h  control_register.h  cpuid.h  ept.h  ept_misconfiguration.h  ept_violation.h  esr.h  external_interrupt.h  hve.h  init_signal.h  interrupt_queue.h  interrupt_window.h  io_instruction.h  ioapic.h  isr.h  lapic.h  lapic_register.h  microcode.h  monitor_trap.h  mov_dr.h  mtrr.h  mtrrs.h  phys_ioapic.h  phys_lapic.h  phys_mtrr.h  phys_x2apic.h  phys_xapic.h  rdmsr.h  sipi.h  time.h  vcpu.h  vcpu_global_state.h  vic.h  virt_lapic.h  virt_x2apic.h  vpid.h  wrmsr.h
bfvmm/include/hve/arch/x64/: unmapper.h
bfvmm/include/support/arch/intel_x64/: test_support.h
bfvmm/include/test/: hve.h  support.h
bfvmm/include/vcpu/arch/intel_x64/: vcpu.h
bfvmm/include/vic/arch/intel_x64/: base.h  phys_lapic.h  vic.h  virt_lapic.h  virt_x2apic.h
bfvmm/integration/: CMakeLists.txt
bfvmm/integration/arch/intel_x64/: CMakeLists.txt  README  test_all.cpp  test_all.sh
bfvmm/integration/arch/intel_x64/control_register/: CMakeLists.txt  trap_cr0.cpp  trap_cr3.cpp  trap_cr4.cpp  trap_cr8.cpp
bfvmm/integration/arch/intel_x64/cpuid/: CMakeLists.txt  trap_cpuid.cpp
bfvmm/integration/arch/intel_x64/efi/: CMakeLists.txt  test_efi.cpp  test_efi_with_interrupts.cpp
bfvmm/integration/arch/intel_x64/ept/: CMakeLists.txt  enable_ept.cpp  remap_page.cpp  trap_ept.cpp
bfvmm/integration/arch/intel_x64/io_instruction/: CMakeLists.txt  trap_in_out.cpp
bfvmm/integration/arch/intel_x64/monitor_trap/: CMakeLists.txt  single_step_cpuid.cpp
bfvmm/integration/arch/intel_x64/mov_dr/: CMakeLists.txt  trap_dr7.cpp
bfvmm/integration/arch/intel_x64/phys_pci/: CMakeLists.txt  phys_pci.cpp
bfvmm/integration/arch/intel_x64/rdmsr/: CMakeLists.txt  trap_rdmsr.cpp
bfvmm/integration/arch/intel_x64/vic/: CMakeLists.txt  test_injection.cpp
bfvmm/integration/arch/intel_x64/vpid/: CMakeLists.txt  enable_vpid.cpp
bfvmm/integration/arch/intel_x64/wrmsr/: CMakeLists.txt  trap_wrmsr.cpp
bfvmm/src/: CMakeLists.txt
bfvmm/src/hve/: CMakeLists.txt  pci_device_allocator.cpp  phys_pci.cpp
bfvmm/src/hve/arch/intel_x64/: apis.cpp  control_register.cpp  cpuid.cpp  ept.cpp  ept_misconfiguration.cpp  ept_violation.cpp  esr.asm  esr.cpp  external_interrupt.cpp  hve.cpp  init_signal.cpp  interrupt_queue.cpp  interrupt_window.cpp  io_instruction.cpp  isr.asm  isr.cpp  lapic_register.cpp  microcode.cpp  (+16 more)
bfvmm/src/main/: CMakeLists.txt
bfvmm/src/vic/: CMakeLists.txt
bfvmm/tests/: CMakeLists.txt
bfvmm/tests/hve/: CMakeLists.txt  dump_pci.py  test_pci_device_allocator.cpp  test_phys_pci.cpp
bfvmm/tests/support/: CMakeLists.txt
src/exit_handler/src/: CMakeLists.txt  Makefile.bf  exit_handler_intel_x64_eapis.cpp  exit_handler_intel_x64_eapis_cr_access_hooks.cpp  exit_handler_intel_x64_eapis_cr_emulation.cpp  exit_handler_intel_x64_eapis_event_emulation.cpp  exit_handler_intel_x64_eapis_io_instruction_emulation.cpp  exit_handler_intel_x64_eapis_io_instruction_vmcall.cpp  exit_handler_intel_x64_eapis_isr.cpp  exit_handler_intel_x64_eapis_isr_support.asm  exit_handler_intel_x64_eapis_monitor_trap_emulation.cpp  exit_handler_intel_x64_eapis_msr_vmcall.cpp  exit_handler_intel_x64_eapis_policy.cpp  exit_handler_intel_x64_eapis_rdmsr_emulation.cpp  exit_handler_intel_x64_eapis_rdmsr_vmcall.cpp  exit_handler_intel_x64_eapis_verifiers.cpp  exit_handler_intel_x64_eapis_verifiers_vmcall.cpp  exit_handler_intel_x64_eapis_vpid_vmcall.cpp  exit_handler_intel_x64_eapis_wrmsr_emulation.cpp  exit_handler_intel_x64_eapis_wrmsr_vmcall.cpp
src/exit_handler/tests/: CMakeLists.txt  test_exit_handler_intel_x64_eapis.cpp  test_exit_handler_intel_x64_eapis_cpuid_emulation.cpp  test_exit_handler_intel_x64_eapis_cpuid_vmcall.cpp  test_exit_handler_intel_x64_eapis_cr_emulation.cpp  test_exit_handler_intel_x64_eapis_io_instruction_emulation.cpp  test_exit_handler_intel_x64_eapis_io_instruction_vmcall.cpp  test_exit_handler_intel_x64_eapis_monitor_trap_emulation.cpp  test_exit_handler_intel_x64_eapis_msr_vmcall.cpp  test_exit_handler_intel_x64_eapis_rdmsr_emulation.cpp  test_exit_handler_intel_x64_eapis_rdmsr_vmcall.cpp  test_exit_handler_intel_x64_eapis_verifiers.cpp  test_exit_handler_intel_x64_eapis_verifiers_vmcall.cpp  test_exit_handler_intel_x64_eapis_vpid_vmcall.cpp  test_exit_handler_intel_x64_eapis_wrmsr_emulation.cpp  test_exit_handler_intel_x64_eapis_wrmsr_vmcall.cpp  test_support.cpp  test_support.h
src/main/src/: CMakeLists.txt
src/misc/tests/: CMakeLists.txt
src/vcpu_factory/src/: CMakeLists.txt  Makefile.bf  vcpu_factory.cpp  vcpu_factory_intel_x64.cpp  vcpu_factory_intel_x64_eapis.cpp
src/vmcs/src/: CMakeLists.txt  Makefile.bf  apic_intel_x64.cpp  ept_entry_intel_x64.cpp  ept_intel_x64.cpp  root_ept_intel_x64.cpp  vmcs_intel_x64_eapis.cpp  vmcs_intel_x64_eapis_cr.cpp  vmcs_intel_x64_eapis_cr_access_hooks.cpp  vmcs_intel_x64_eapis_ept.cpp  vmcs_intel_x64_eapis_event.cpp  vmcs_intel_x64_eapis_io.cpp  vmcs_intel_x64_eapis_msr.cpp  vmcs_intel_x64_eapis_vpid.cpp
src/vmcs/tests/: CMakeLists.txt  test_ept_intel_x64.cpp  test_root_ept_intel_x64.cpp  test_support.h  test_vmcs_intel_x64_eapis_cr.cpp  test_vmcs_intel_x64_eapis_ept.cpp  test_vmcs_intel_x64_eapis_msr.cpp
tests/: CMakeLists.txt  eapis_catch.cpp  test_extended_apis.sh  test_io_log_all.sh  test_io_log_lspci_ports.sh  test_msr_log_all.sh  test_msr_tsc_deadline_log.sh  test_policy.sh  test_vpid.sh
tests/arch/intel_x64/: test_bitmanip.cpp
tests/arch/intel_x64/exit_handler/: test_cr_emulation.cpp  test_io_instruction_emulation.cpp  test_policy.cpp  test_rdmsr_vmcall.cpp  test_support.cpp  test_support.h  test_verifiers_vmcall.cpp
tests/arch/intel_x64/vmcs/: test_ept_entry.cpp  test_vmcs_vpid.cpp
tests/hve/: CMakeLists.txt
tests/util/: CMakeLists.txt  test_bitmanip.cpp
(+473 files in other folders)
