list(APPEND SOURCES
    vcpu_factory_intel_x64_eapis.cpp
)

if(BUILD_VMM_SHARED)
    add_library(eapis_vcpu_factory_shared SHARED ${SOURCES})
    set_target_properties(eapis_vcpu_factory_shared PROPERTIES OUTPUT_NAME "eapis_vcpu_factory")
    target_compile_definitions(eapis_vcpu_factory_shared PRIVATE SHARED_VCPU)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_vcpu)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_vmxon)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_exit_handler)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_vmcs)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_memory_manager)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_debug_ring)
    target_link_libraries(eapis_vcpu_factory_shared bfvmm_intrinsics)
    install(TARGETS eapis_vcpu_factory_shared DESTINATION ${BUILD_SYSROOT_VMM}/lib)
endif()

if(BUILD_VMM_STATIC)
    add_library(eapis_vcpu_factory_static STATIC ${SOURCES})
    set_target_properties(eapis_vcpu_factory_static PROPERTIES OUTPUT_NAME "eapis_vcpu_factory")
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_VCPU)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_DEBUG_RING)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_INTRINSICS)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_MEMORY_MANAGER)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_VMXON)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_VMCS)
    target_compile_definitions(eapis_vcpu_factory_static PUBLIC STATIC_EXIT_HANDLER)
    install(TARGETS eapis_vcpu_factory_static DESTINATION ${BUILD_SYSROOT_VMM}/lib)
endif()
